refactor : changed search result and return empty array if no images found for club